--- a/php-queue/Dockerfile
+++ b/php-queue/Dockerfile
@@ -2,7 +2,6 @@ FROM benbjurstrom/php:latest
 
 ENV QUEUE_CONNECTION=redis
 ENV QUEUE_NAME=default
-ENV LARAVEL_HORIZON=true
 
 # Install supervisor
 RUN apk update && apk add -u python py-pip
@@ -20,4 +19,7 @@ COPY init.sh /usr/local/bin/init.sh
 RUN chmod u+x /usr/local/bin/init.sh
 
 # Add schedule command to crontab
-RUN echo '*  *  *  *  * php /var/www/app/artisan schedule:run >> /dev/null 2>&1' > /etc/crontabs/root
+RUN echo '*  *  *  *  * php /var/www/artisan schedule:run >> /dev/null 2>&1' > /etc/crontabs/root
+
+# Run supervisor
+ENTRYPOINT ["/bin/sh", "/usr/local/bin/init.sh"]
