--- a/php-team/Dockerfile
+++ b/php-team/Dockerfile
@@ -2,7 +2,7 @@
 # Based on https://github.com/ambientum/ambientum/blob/master/php/7.3/Dockerfile
 # with some unused features removed
 #
-FROM alpine:3.10
+FROM alpine:3.8
 
 # Repository/Image Maintainer
 LABEL maintainer="Ben Bjurstrom <bbjurstrom@gmail.com>"
@@ -28,15 +28,15 @@ ADD bashrc /home/bashrc
 RUN echo "---> Enabling PHP-Alpine" && \
     apk add --update wget && \
     wget -O /etc/apk/keys/php-alpine.rsa.pub https://dl.bintray.com/php-alpine/key/php-alpine.rsa.pub && \
-    echo "http://dl-cdn.alpinelinux.org/alpine/v3.9/main" > /etc/apk/repositories && \
-    echo "http://dl-cdn.alpinelinux.org/alpine/v3.9/community" >> /etc/apk/repositories && \
-    echo "https://dl.bintray.com/php-alpine/v3.9/php-7.3" >> /etc/apk/repositories && \
+    echo "http://dl-cdn.alpinelinux.org/alpine/v3.8/main" > /etc/apk/repositories && \
+    echo "http://dl-cdn.alpinelinux.org/alpine/v3.8/community" >> /etc/apk/repositories && \
+    echo "https://dl.bintray.com/php-alpine/v3.8/php-7.3" >> /etc/apk/repositories && \
     apk add --update \
     curl \
     bash \
     vim \
     git \
-    qpdf \
+    pdftk \
     unzip \
     yarn \
     sudo && \
