--- a/php-laravel/Dockerfile
+++ b/php-laravel/Dockerfile
@@ -1,5 +1,7 @@
 FROM csatf/php-ambientum:latest
 
+RUN composer global require laravel/vapor-cli
+
 # Copy scripts
 COPY init.sh /scripts/init.sh
 RUN sudo chmod +x /scripts/init.sh
